# gameharmony

./: .gitignore  Cargo.toml  scraper_config.json  steam_ids.json
data/: manifest.json  manifest_1732538653.json  manifest_1732545504.json  manifest_1732826763.json  manifest_1732851119.json  manifest_1733094264.json  manifest_1733097956.json  manifest_1733103226.json
src/: config.rs  error.rs  main.rs  utils.rs
src/clients/: mod.rs  protondb.rs  rawg.rs  steam.rs
src/config/: cli.rs  mod.rs
src/core/: game_entry.rs  mod.rs  processor.rs
src/domain/: game.rs  manifest.rs  mod.rs  storage.rs
src/infrastructure/: mod.rs
src/infrastructure/clients/: mod.rs  rawg.rs  steam.rs
src/infrastructure/scrapers/: eurogamer.rs  ign.rs  mod.rs  pcgamer.rs  polygon.rs  polygon_ps5_top25.rs  rockpapershotgun.rs
src/infrastructure/storage/: fs_store.rs  mod.rs
src/matcher/: mapping.rs  mod.rs  normalize.rs
src/processor/: game_entry.rs  manifest.rs  mod.rs  processor.rs
src/scrapers/: eurogamer.rs  mod.rs  rockpapershotgun.rs
src/services/: enrichment.rs  game_service.rs  matching.rs  merging.rs  mod.rs  publish.rs  scoring.rs  scraping.rs  text_utils.rs
