[package]
name = "gameharmony"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.20"
fuzzy-matcher = "0.3"
regex = "1.11"
scraper = "0.21"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
strsim = "0.11"
lazy_static = "1.4"
unicode-normalization = "0.1.24"
rustc-hash = "2.0"  # Fast HashMap implementation
ahash = "0.8"
clap = { version = "4.5.21", features = ["derive", "env"] }
indicatif = "0.17.9"      # Another fast hashing algorithm

[dev-dependencies]
tempfile = "3"